# cline_deep_agent

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  cline_agent_manager_implementation_plan.md  docker-compose.yml  pyproject.toml  telemetry.md
.github/workflows/: ci.yml
benchmark/: __init__.py  __main__.py  config.py  leaderboard.py  runner.py  scorer.py
benchmark/adapters/: __init__.py  base.py  cline_deep.py
benchmark/tasks/_template/: instruction.md  setup.sh  task.toml
benchmark/tasks/bugfix-001-off-by-one/: instruction.md  setup.sh  task.toml
benchmark/tasks/bugfix-002-null-check/: instruction.md  setup.sh  task.toml
benchmark/tasks/feature-001-add-endpoint/: instruction.md  setup.sh  task.toml
benchmark/tasks/multifile-001-api-migration/: instruction.md  task.toml
docs/: composite_backend_system.md
grafana/: Dockerfile
grafana/dashboards/: cline-telemetry.json
ollama/: Modelfile.qwen3-coder-tools  setup.sh
scripts/: migrate_to_postgres.py
skills/cline_qa/: SKILL.md
skills/decision_policy/: SKILL.md
skills/qa_verification/: SKILL.md
skills/task_decomposition/: SKILL.md
src/: agent.py  bridge.py  cli.py  db.py  hitl.py  llm.py  logging_config.py  models.py  subagent.py  telemetry.py
tests/benchmark/: test_config.py  test_leaderboard.py  test_runner.py  test_scorer.py
tests/bridge/: test_bridge.py
tests/core/: test_agent.py  test_subagent.py
tests/e2e/: test_happy_path.py
tests/hitl/: test_hitl.py
tests/llm/: test_llm.py
tests/memory/: test_models.py
tests/skills/: test_skills.py
(+18 files in other folders)
