[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cline-agent-manager"
version = "0.1.0"
description = "Cline CLI Agent Manager built on LangChain Deep Agents SDK"
requires-python = ">=3.12"
dependencies = [
    "deepagents>=0.4",
    "langgraph>=1.0",
    "langchain-anthropic>=1.3",
    "langchain-ollama>=1.0",
    "pexpect>=4.9",
    "python-dotenv>=1.0",
    "pydantic>=2.0",
    "httpx>=0.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.9",
    "mypy>=1.13",
    "pre-commit>=4.0",
]

[project.scripts]
cline-agent = "src.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
